# research-assistant

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/endpoints/: documents.py  healthcheck.py  research.py
app/business/: documents.py  research.py
app/core/: config.py
app/managers/: comparison.py  confidence_filter.py  correlation.py  correlation_filter.py  doc_list.py  embedding.py  language.py  retriever.py  translator.py  vector_store.py
app/schemas/: comparison.py  correlation.py  doc_list.py  documents.py  research.py  translation.py
